[package]
name = "cow_vec_item"
version = "0.1.0"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2018"

description = "Copy-on-write Vec, available on stable rust."

readme = "README.md"

keywords = ["collection","copy-on-write"]

license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
