[package]
name = "cow_vec_item"
version = "0.5.0"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2018"
documentation = "https://docs.rs/cow_vec_item/"
homepage = "https://github.com/avl/cow_vec_item/"


description = "Copy-on-write Vec, available on stable rust."

readme = "README.md"

keywords = ["collection","copy-on-write"]

license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
